@@ -259,7 +259,7 @@ strace::vprntf (unsigned category, const char *func, const char *fmt, va_list ap
       if (GetFileType (GetStdHandle (STD_ERROR_HANDLE)) != FILE_TYPE_CHAR)
 	{
 	  HANDLE h = CreateFile ("CONOUT$", GENERIC_READ | GENERIC_WRITE,
-				 FILE_SHARE_WRITE | FILE_SHARE_WRITE,
+				 FILE_SHARE_READ | FILE_SHARE_WRITE,
 				 &sec_none, OPEN_EXISTING, 0, 0);
 	  if (h != INVALID_HANDLE_VALUE)
 	    {
